test_suite/alan-2022-examples/failing/006170_mutation.alan
source l6 begin leave 72 >= + 9 end
